--- a/zkpylons/themes/lca2016/public/css/simple-sidebar.css
+++ b/zkpylons/themes/lca2016/public/css/simple-sidebar.css
@@ -27,10 +27,23 @@
     margin-left: -250px;
     overflow-y: auto;
     background: #000;
+
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+}
+
+#background-image{
+  background-image: url("/img/bollards1.jpg");
+  width: 100%;
+  height: 100%;
+
+  -webkit-filter: blur(10px);
+  -moz-filter: blur(10px);
+  -o-filter: blur(10px);
+  -ms-filter: blur(10px);
+  filter: blur(10px);
 }
 
 #wrapper.toggled #sidebar-wrapper {
@@ -57,6 +70,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    /* background: rgba(0,0,0,0.2); */
 }
 
 .sidebar-nav li {
