Assigned table class to tables on admin pages to improve readability. Also added sorttable.js which allows in browser sorting of tables.

--- a/zkpylons/themes/lca2016/public/css/bootstrap.css
+++ b/zkpylons/themes/lca2016/public/css/bootstrap.css
@@ -250,7 +250,7 @@ th {
     border-top-color: #000 !important;
   }
   .label {
-    border: 1px solid #000;
+    border: 1px solid #fff;
   }
   .table {
     border-collapse: collapse !important;
