--- a/zkpylons/themes/lca2016/public/css/bootstrap.css
+++ b/zkpylons/themes/lca2016/public/css/bootstrap.css
@@ -6154,7 +6154,7 @@ button.close {
   font-size: 20px;
   color: #fff;
   text-align: center;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
   filter: alpha(opacity=50);
   opacity: .5;
 }
@@ -6256,7 +6256,7 @@ button.close {
   padding-bottom: 20px;
   color: #fff;
   text-align: center;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  text-shadow: 0 1px 2px rgb(0, 0, 0);
 }
 .carousel-caption .btn {
   text-shadow: none;
